# vitap-pal

./: .gitignore  .prettierrc  README.md  flutter_rust_bridge.yaml  package-lock.json  package.json  pnpm-lock.yaml  pubspec.yaml  setup.sh  svelte.config.js  vite.config.js
.github/workflows/: latest.yml  release.yml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: constants.dart  main.dart
lib/models/: attendance_model.dart  attendance_model.freezed.dart  client.dart  client_model.dart  client_model.freezed.dart  database.dart  features.dart  features_model.dart  features_model.freezed.dart  schedule_model.dart  settings_model.dart  state_model.dart  state_model.freezed.dart  timetable_model.dart  timetable_model.freezed.dart  timtable.dart  user_model.dart  user_model.freezed.dart  vtopuser.dart
lib/others/: others.dart
lib/pages/: attendance.dart  home.dart  scaffold.dart  timetable.dart
linux/: CMakeLists.txt
policy/: index.html
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  vtop_main.rs
rust/src/api/vtop/: client.rs  mod.rs  parseattn.rs  parsecoursepg.rs  parsemarks.rs  parsesched.rs  parsett.rs  types.rs  wifi.rs
rust_builder/: pubspec.yaml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-native/: Cargo.toml  README.md  package.json
tauri-plugin-nativeapi/: Cargo.toml  README.md  package.json
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+332 files in other folders)
