[package]
name = "rust_lib_vitapmate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
reqwest = { version = "0.12.15",default-features = false, features = ["stream","rustls-tls", "multipart","cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.23.1"
base = "0.1.0"
base64 = "0.22.1"
tokio = "1.43.0"
urlencoding = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }


[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols